added service model and internationalization

--- a/mazgan/templates/mazgan/main.html
+++ b/mazgan/templates/mazgan/main.html
@@ -6,6 +6,8 @@
 {% trans "Eremei mazgan" %}
 {% endblock title %}
 
+{% block path %}/{% endblock %}
+
 {% block content %}
 
 {% endblock content %}
