--- a/mazgan/templates/mazgan/base.html
+++ b/mazgan/templates/mazgan/base.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -12,16 +13,28 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url "mazgan:main" %}">Navbar</a>
+        <a class="navbar-brand" href="{% url "mazgan:main" %}">Mazgan</a>
+        <a class="nav-item dropdown">
+          {% get_current_language as LANGUAGE_CODE %}
+          {% get_available_languages as LANGUAGES %}
+          {% get_language_info_list for LANGUAGES as languages %}
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            {% trans "Language" %}
+          </a>
+          <ul class="dropdown-menu">
+            {% for language in languages %}
+              <li><a class="dropdown-item" href="/{{ language.code }}{% block path %}{% endblock %}">{{ language.name_local }}</a></li>
+            {% endfor %}
+          </ul>
+        </a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          <div class="navbar-nav flex-grow-1 justify-content-around">
+            <a class="nav-link" href="#">Price list</a>
+            <a class="nav-link" href="#">Photos</a>
           </div>
         </div>
       </div>
