--- a/mazgan/templates/mazgan/base.html
+++ b/mazgan/templates/mazgan/base.html
@@ -13,20 +13,22 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url "mazgan:main" %}">Mazgan</a>
-        <a class="nav-item dropdown">
-          {% get_current_language as LANGUAGE_CODE %}
-          {% get_available_languages as LANGUAGES %}
-          {% get_language_info_list for LANGUAGES as languages %}
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            {% trans "Language" %}
-          </a>
-          <ul class="dropdown-menu">
-            {% for language in languages %}
-              <li><a class="dropdown-item" href="/{{ language.code }}{% block path %}{% endblock %}">{{ language.name_local }}</a></li>
-            {% endfor %}
-          </ul>
-        </a>
+        <div class="d-flex">
+          <a class="navbar-brand" href="{% url "mazgan:main" %}">Mazgan</a>
+          <li class="nav-item dropdown list-unstyled  align-self-center">
+            {% get_current_language as LANGUAGE_CODE %}
+            {% get_available_languages as LANGUAGES %}
+            {% get_language_info_list for LANGUAGES as languages %}
+            <a id="flag-holder" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              {% trans "Language" %}
+            </a>
+            <ul class="dropdown-menu">
+              {% for language in languages %}
+                <li><a class="dropdown-item" href="/{{ language.code }}{% block path %}{% endblock %}">{{ language.name_local }}</a></li>
+              {% endfor %}
+            </ul>
+          </li>
+        </div>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -42,7 +44,19 @@
 
       {% block content %}
       {% endblock content %}
-              
+      {% comment %} <script src="{% static "mazgan/js/base.js" %}"></script> {% endcomment %}
+      <script>
+        function change_flag() {
+          const flag_holder = document.querySelector('#flag-holder');
+          let url = "{% static "mazgan/images/flags/" %}" + "{{ LANGUAGE_CODE|upper }}" + ".svg"
+          console.log(url)
+          flag_holder.innerHTML = `
+            <img src="${url}" %}">
+          `
+        }
+        change_flag()
+        
+      </script>
       <script src="{% static "mazgan/js/bootstrap.bundle.min.js" %}" async defer></script>
   </body>
 </html>
