--- a/mazgan/templates/mazgan/base.html
+++ b/mazgan/templates/mazgan/base.html
@@ -9,6 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static "mazgan/css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "mazgan/css/mazgan.css" %}">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -45,19 +46,21 @@
 
       {% block content %}
       {% endblock content %}
-      {% comment %} <script src="{% static "mazgan/js/base.js" %}"></script> {% endcomment %}
-      <script>
-        function change_flag() {
-          const flag_holder = document.querySelector('#flag-holder');
-          let url = "{% static "mazgan/images/flags/" %}" + "{{ LANGUAGE_CODE|upper }}" + ".svg"
-          console.log(url)
-          flag_holder.innerHTML = `
-            <img src="${url}" %}">
-          `
-        }
-        change_flag()
-        
-      </script>
-      <script src="{% static "mazgan/js/bootstrap.bundle.min.js" %}" async defer></script>
+    <div id="footer" class="d-flex justify-content-center container-fluid bg-light mt-auto">
+      <p class="align-self-center text-body-tertiary">Developed by Norwin the Dachshund, 2024</p>
+    </div>  
+    <script>
+      function change_flag() {
+        const flag_holder = document.querySelector('#flag-holder');
+        let url = "{% static "mazgan/images/flags/" %}" + "{{ LANGUAGE_CODE|upper }}" + ".svg"
+        console.log(url)
+        flag_holder.innerHTML = `
+          <img src="${url}" %}">
+        `
+      }
+      change_flag()
+    </script>
+    <script src="{% static "mazgan/js/bootstrap.bundle.min.js" %}" async defer></script>
+
   </body>
 </html>
