--- a/mazgan/templates/mazgan/main.html
+++ b/mazgan/templates/mazgan/main.html
@@ -9,6 +9,22 @@
 {% block path %}/{% endblock %}
 
 {% block content %}
+<div class="container-fluid">
+  
+  <div class="row mt-3">
+    <div class="col-1 col-lg-3"></div>
+
+    <div class="col-10 col-lg-6 d-flex flex-column flex-lg-row">
+      <form method="POST" action="{% url "mazgan:main" %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="button" class="btn btn-primary">{% trans "Submit" %}</button>
+      </form>
+    </div>
+
+    <div class="col-1 col-lg-3"></div>
+  </div>
+</div>
 
 {% endblock content %}
 
