--- a/mazgan/templates/mazgan/base.html
+++ b/mazgan/templates/mazgan/base.html
@@ -43,9 +43,25 @@
         </div>
       </div>
     </nav>
+   
+    <div class="container-fluid">
+      <div class="row mt-3">
+        
+        <div class="col-1 col-lg-3">
+          
+        </div>
 
-      {% block content %}
-      {% endblock content %}
+        <div class="col-10 col-lg-6 d-flex flex-column flex-lg-row">
+          {% block content %}
+          {% endblock content %}
+        </div>
+
+        <div class="col-1 col-lg-3">
+        </div>
+
+      </div>
+    </div>
+
     <div id="footer" class="d-flex justify-content-center container-fluid bg-light mt-auto">
       <p class="align-self-center text-body-tertiary">Developed by Norwin the Dachshund, 2024</p>
     </div>  
